# rules_playwright

examples/rules_js/: .bazelignore  .bazelrc  BUILD.bazel  MODULE.bazel  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml
examples/rules_js/myproject/: BUILD.bazel  package.json  playwright.config.ts
examples/rules_js/myproject/tests/: example.spec.ts
examples/rules_js/tests/: example.spec.ts
playwright/: extensions.bzl  repositories.bzl
playwright/private/: util.bzl
playwright/private/cli/src/: browser_targets.rs  download_paths.json
tools/release/: BUILD.bazel
tools/release/artifacts/: cli-arm64-apple-darwin  cli-arm64-unknown-linux-musl  cli-x86_64-apple-darwin  cli-x86_64-unknown-linux-musl
