load("@mrmeku_rules_playwright//playwright:defs.bzl", "playwright_browser_matrix", "playwright_integrity_map")
load("@npm//:defs.bzl", "npm_link_all_packages")

npm_link_all_packages(name = "node_modules")

# Use this target to generate an integrity map for the toolchain within MODULE.bazel
playwright_integrity_map(
    name = "playwright_integrity_map",
    browsers = playwright_browser_matrix(
        browser_names = [
            "chromium-headless-shell",
            "firefox",
            "webkit",
        ],
        platforms = [
            "mac15-arm64",
            "ubuntu20.04-x64",
        ],
        playright_repo_name = "playwright",
    ),
)
